--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
+    "vue-recaptcha": "^1.3.0",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
