--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
+    "uuid-tool": "^2.0.2",
     "vue": "^2.6.12",
     "vue-recaptcha": "^1.3.0",
     "vuex": "^2.3.1"
